syntax = "proto3";

package api;
option go_package = "./;api";

message MessageRequest {
    string message = 1;
}

message MessageResponse {
    string message = 1;
}

service Echo {
    rpc EchoMessage(stream MessageRequest) returns (stream MessageResponse);
}